kyverno/steps/kyverno-validate/test/fixtures/suite/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-latest-tag
policies:
  - disallow-latest-tag.yaml
resources:
  - compliant-pod.yaml
results:
  - policy: disallow-latest-tag
    rule: require-image-tag
    kind: Pod
    resources:
      - compliant
    result: pass
